--- a/Oximede/index.html
+++ b/Oximede/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>limelight</title>
+      <title>Oximede</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -59,16 +59,16 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="index.html">Inicio</a>
+                                 <a class="nav-link" href="#index">Inicio</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Acerca de nosotros</a>
+                                 <a class="nav-link" href="#about">Acerca de nosotros</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="service.html">Servicios</a>
+                                 <a class="nav-link" href="#service">Servicios</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contacta con nosotros</a>
+                                 <a class="nav-link" href="#contact">Contacta con nosotros</a>
                               </li>
                            </ul>
                         </div>
@@ -95,39 +95,9 @@
                         <div class="row">
                            <div class="col-md-7 offset-md-5">
                               <div class="text-bg">
-                                 <h1 class="=a"> tu solucion <br>en gases</h1>
-                                 <span>There are many variations of passages of Lorem Ipsum available</span>
-                                 <a class="read_more" href="Javascript:void(0)">Read More</a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="carousel-caption relative">
-                        <div class="row">
-                           <div class="col-md-7 offset-md-5">
-                              <div class="text-bg">
-                                 <h1 class="=a"> tu solucion <br>en gases</h1>
-                                 <span>There are many variations of passages of Lorem Ipsum available</span>
-                                 <a class="read_more" href="Javascript:void(0)">Read More</a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="carousel-caption relative">
-                        <div class="row">
-                           <div class="col-md-7 offset-md-5">
-                              <div class="text-bg">
-                                 <h1 class="=a"> tu solucion <br>en gases</h1>
-                                 <span>There are many variations of passages of Lorem Ipsum available</span>
-                                 <a class="read_more" href="Javascript:void(0)">Read More</a>
+                                 <h1 class="=a"> Tu solución <br>en gases</h1>
+                                 <span class="text"> Industriales, consumibles, equipos de soldadura y extintores</span>
+<!--                                 <a class="read_more" href="Javascript:void(0)">Read More</a>-->
                               </div>
                            </div>
                         </div>
@@ -135,14 +105,7 @@
                   </div>
                </div>
             </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <i class="fa fa-angle-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <i class="fa fa-angle-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
-            </a>
+
          </div>
       </section>
       <!-- end banner -->
@@ -152,7 +115,7 @@
             <div class="row">
                <div class="col-md-5">
                   <div class="titlepage">
-                     <h2>About <span class="green">Us</span></h2>
+                     <h2>A cerca de  <span class="green">Nostros</span></h2>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humourThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
                      <a class="read_more" href="Javascript:void(0)"> Read More</a>
                   </div>
@@ -172,7 +135,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Our <span class="green">Services</span></h2>
+                     <h2>Nuestros <span class="green">Servicios</span></h2>
                   </div>
                </div>
             </div>
@@ -182,29 +145,29 @@
                      <div class="col-md-4 col-sm-6">
                         <div class="service_box">
                            <i><img src="images/service1.png" alt="#"/></i>
-                           <h3>Retina Ready</h3>
-                           <p>many variations of passages <br>of Lorem Ipsum available,</p>
+                           <<h3>Gases Industriales de Alta Calidad</h3>
+                           <p>Soluciones seguras y efectivas para cada sector industrial.</p>
                         </div>
                      </div>
                      <div class="col-md-4 offset-md-1 col-sm-6">
                         <div class="service_box">
                            <i><img src="images/service2.png" alt="#"/></i>
-                           <h3>Creative Elements</h3>
-                           <p>many variations of passages <br>of Lorem Ipsum available,</p>
+                           <h3>Consumibles de Soldadura</h3>
+                           <p>Accesorios confiables para trabajos precisos y duraderos.</p>
                         </div>
                      </div>
                      <div class="col-md-4 offset-md-3 col-sm-6 mar_top">
                         <div class="service_box">
                            <i><img src="images/service3.png" alt="#"/></i>
-                           <h3>Easy-to-Use</h3>
-                           <p>many variations of passages <br>of Lorem Ipsum available,</p>
+                           <h3>Equipos de Soldadura Profesional</h3>
+                           <p>La última tecnología para garantizar un rendimiento óptimo.</p>
                         </div>
                      </div>
                      <div class="col-md-4 offset-md-1 col-sm-6 mar_top">
                         <div class="service_box">
                            <i><img src="images/service4.png" alt="#"/></i>
-                           <h3>Easy Import</h3>
-                           <p>many variations of passages <br>of Lorem Ipsum available,</p>
+                           <h3>Extintores Certificados</h3>
+                           <p>Protección y seguridad para cualquier entorno laboral.</p>
                         </div>
                      </div>
                      <div class="col-md-12">
@@ -298,86 +261,7 @@
          </div>
       </div>
       <!-- end gallery -->
-      <!-- design -->
-      <div class="design">
-         <div class="container-fluid">
-            <div class="row d_flex">
-               <div class="col-md-5">
-                  <div id="design" class="carousel slide banner_design" data-ride="carousel">
-                     <ol class="carousel-indicators">
-                        <li data-target="#design" data-slide-to="0" class="active"></li>
-                        <li data-target="#design" data-slide-to="1"></li>
-                        <li data-target="#design" data-slide-to="2"></li>
-                     </ol>
-                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                           <div class="container">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-12">
-                                       <div class="text_de">
-                                          <div class="titlepage">
-                                             <h2>New Ideas <span class="green">Design</span></h2>
-                                          </div>
-                                          <p>There are many variations of passages of Lorem Ipsum available, but theThere are many variations of passages of Lorem Ipsum available, but the</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-12">
-                                       <div class="text_de">
-                                          <div class="titlepage">
-                                             <h2>New Ideas <span class="green">Design</span></h2>
-                                          </div>
-                                          <p>There are many variations of passages of Lorem Ipsum available, but theThere are many variations of passages of Lorem Ipsum available, but the</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-12">
-                                       <div class="text_de">
-                                          <div class="titlepage">
-                                             <h2>New Ideas <span class="green">Design</span></h2>
-                                          </div>
-                                          <p>There are many variations of passages of Lorem Ipsum available, but theThere are many variations of passages of Lorem Ipsum available, but the</p>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <a class="carousel-control-prev" href="#design" role="button" data-slide="prev">
-                     <i class="fa fa-angle-left" aria-hidden="true"></i>
-                     <span class="sr-only">Previous</span>
-                     </a>
-                     <a class="carousel-control-next" href="#design" role="button" data-slide="next">
-                     <i class="fa fa-angle-right" aria-hidden="true"></i>
-                     <span class="sr-only">Next</span>
-                     </a>
-                  </div>
-               </div>
-               <div class="col-md-7 pad_roght0">
-                  <div class="design_img">
-                     <figure><img src="images/desi.jpg" alt="#"/></figure>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- end design -->
+
       <!-- latest news -->
       <div  class="latest_news">
          <div class="container">
@@ -465,7 +349,7 @@
                <div class="col-md-6">
                   <div class="map_main">
                      <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="345" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Cl.+61+%2353-14,+La+Candelaria,+Medell%C3%ADn,+Antioquia" width="600" height="345" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
                      </div>
                   </div>
                </div>
@@ -532,15 +416,7 @@
                   </div>
                </div>
             </div>
-            <div class="copyright">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-10 offset-md-1">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
+
          </div>
       </footer>
       <!-- end footer -->
@@ -551,5 +427,9 @@
       <!-- sidebar -->
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
+
+      <a href="https://wa.me/573245167865" class="whatsapp-button" target="_blank" title="Contactar por WhatsApp">
+         <img src="images/whats-icon.png" alt="WhatsApp" />
+      </a>
    </body>
 </html>
