--- a/Oximede/index.html
+++ b/Oximede/index.html
@@ -46,12 +46,12 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" width="800" height="700" /></a>
+                              <a href="index.html"><img src="images/banner-nav.jpg" alt="#" width="800" height="700" /></a>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-9 offset-md-1">
+                  <div class="col-md-9  offset-md-1">
                      <nav class="navigation navbar navbar-expand-md navbar-dark ">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="#index">Inicio</a>
+                                 <a class="nav-link" href="javascript:void(0)">Inicio</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="#about">Acerca de nosotros</a>
@@ -144,8 +144,8 @@
                   <div class="row">
                      <div class="col-md-4 col-sm-6">
                         <div class="service_box">
-                           <i><img src="images/service1.png" alt="#"/></i>
-                           <<h3>Gases Industriales de Alta Calidad</h3>
+                           <i><img src="images/icon1.png" width="79" alt="#"/></i>
+                           <h3>Gases Industriales de Alta Calidad</h3>
                            <p>Soluciones seguras y efectivas para cada sector industrial.</p>
                         </div>
                      </div>
@@ -158,7 +158,7 @@
                      </div>
                      <div class="col-md-4 offset-md-3 col-sm-6 mar_top">
                         <div class="service_box">
-                           <i><img src="images/service3.png" alt="#"/></i>
+                           <i><img src="images/welder.png" width="79" alt="#"/></i>
                            <h3>Equipos de Soldadura Profesional</h3>
                            <p>La última tecnología para garantizar un rendimiento óptimo.</p>
                         </div>
@@ -428,7 +428,7 @@
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
 
-      <a href="https://wa.me/573245167865" class="whatsapp-button" target="_blank" title="Contactar por WhatsApp">
+      <a href="https://wa.me/573006856777" class="whatsapp-button" target="_blank" title="Contactar por WhatsApp">
          <img src="images/whats-icon.png" alt="WhatsApp" />
       </a>
    </body>
