--- a/Oximede/index.html
+++ b/Oximede/index.html
@@ -95,8 +95,8 @@
                         <div class="row">
                            <div class="col-md-7 offset-md-5">
                               <div class="text-bg">
-                                 <h1 class="=a"> Tu solución <br>en gases</h1>
-                                 <span class="text"> Industriales, consumibles, equipos de soldadura y extintores</span>
+                                 <h1 class="=a text-dark"> Tu Solución <br>En Gases</h1>
+                                 <span class="text-black-50"> Industriales, consumibles, equipos de soldadura y extintores</span>
 <!--                                 <a class="read_more" href="Javascript:void(0)">Read More</a>-->
                               </div>
                            </div>
@@ -151,28 +151,28 @@
                      </div>
                      <div class="col-md-4 offset-md-1 col-sm-6">
                         <div class="service_box">
-                           <i><img src="images/service2.png" alt="#"/></i>
+                           <i><img src="images/icon2.png" alt="#"/></i>
                            <h3>Consumibles de Soldadura</h3>
                            <p>Accesorios confiables para trabajos precisos y duraderos.</p>
                         </div>
                      </div>
                      <div class="col-md-4 offset-md-3 col-sm-6 mar_top">
                         <div class="service_box">
-                           <i><img src="images/welder.png" width="79" alt="#"/></i>
+                           <i><img src="images/icon3.png" width="79" alt="#"/></i>
                            <h3>Equipos de Soldadura Profesional</h3>
                            <p>La última tecnología para garantizar un rendimiento óptimo.</p>
                         </div>
                      </div>
                      <div class="col-md-4 offset-md-1 col-sm-6 mar_top">
                         <div class="service_box">
-                           <i><img src="images/service4.png" alt="#"/></i>
+                           <i><img src="images/icon4.png" alt="#"/></i>
                            <h3>Extintores Certificados</h3>
                            <p>Protección y seguridad para cualquier entorno laboral.</p>
                         </div>
                      </div>
-                     <div class="col-md-12">
-                        <a class="read_more" href="Javascript:void(0)"> Read More</a>
-                     </div>
+<!--                     <div class="col-md-12">-->
+<!--                        <a class="read_more text-dark" href="Javascript:void(0)"> Read More</a>-->
+<!--                     </div>-->
                   </div>
                </div>
             </div>
@@ -185,76 +185,53 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Our <span class="green">gallery</span></h2>
-                     <p>here are many variations of passages of Lorem Ipsum available, but the majority have suffer</p>
+                     <h2>Nuestra <span class="green">Galeria</span></h2>
+                     <p>Conoce todos nuestros productos de alta calidad</p>
                   </div>
                </div>
             </div>
             <div class="row">
-               <div class="col-md-4 col-sm-6">
+               <div class="col-md-4 col-sm-6 mb-2">
                   <div class="gallery_text">
                      <div class="galleryh3">
-                        <h3>Interior Design</h3>
-                        <p>of passages of Lorem <br>
-                           Ipsum available <br>
-                           , but the majority <br>
-                           have suffer
+                        <h3 class="text-dark">Seguridad y Calidad a tu Alcance</h3>
+                        <p class="text-dark">Equipos diseñados <br>
+                           para brindar la máxima protección <br>
+                           en todo tipo de industrias.<br>
                         </p>
                      </div>
                   </div>
                </div>
-               <div class="col-md-4 col-sm-6">
+               <div class="col-md-4 col-sm-6 w-100 h-100">
                   <div class="gallery_img">
-                     <figure><img src="images/gallery1.jpg" alt="#"/></figure>
+                     <figure><img src="images/galeria1.jpg"  alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/gallery2.jpg" alt="#"/></figure>
+                     <figure><img src="images/galeria2.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/gallery3.jpg" alt="#"/></figure>
+                     <figure><img src="images/galeria3.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/gallery4.jpg" alt="#"/></figure>
-                  </div>
-               </div>
-               <div class="col-md-4 col-sm-6">
-                  <div class="gallery_text">
-                     <div class="galleryh3">
-                        <h3>Interior Design</h3>
-                        <p>of passages of Lorem <br>
-                           Ipsum available <br>
-                           , but the majority <br>
-                           have suffer
-                        </p>
-                     </div>
+                     <figure><img src="images/galeria4.jpg" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div class="gallery_text">
                      <div class="galleryh3">
-                        <h3>Interior Design</h3>
-                        <p>of passages of Lorem <br>
-                           Ipsum available <br>
-                           , but the majority <br>
-                           have suffer
+                        <h3 class="text-dark">La Fuerza de la Soldadura Profesional</h3>
+                        <p class="text-dark">Productos de alta calidad<br>
+                           para uniones fuertes y duraderas. <br>
+                           Innovación y resistencia <br>
+                           para tus trabajos más exigentes.
                         </p>
                      </div>
-                  </div>
-               </div>
-               <div class="col-md-4 col-sm-6">
-                  <div class="gallery_img">
-                     <figure><img src="images/gallery5.jpg" alt="#"/></figure>
-                  </div>
-               </div>
-               <div class="col-md-4 col-sm-6">
-                  <div class="gallery_img">
-                     <figure><img src="images/gallery6.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -263,56 +240,6 @@
       <!-- end gallery -->
 
       <!-- latest news -->
-      <div  class="latest_news">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="titlepage">
-                     <h2>Read Our <span class="green">Latest News</span></h2>
-                  </div>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-4 offset-md-2">
-                  <div id="new" class="news_box">
-                     <div class="news_img">
-                        <figure><img src="images/blog1.jpg" alt="#"/></figure>
-                     </div>
-                     <div class="news_room">
-                        <span>Post By :limelight</span>
-                        <ul>
-                           <li><a href="Javascript:void(0)">Like <i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)">Comment <i class="fa fa-comments-o" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)">Share <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
-                        </ul>
-                        <h3>Interior Design</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content  </p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-4 ">
-                  <div id="new" class="news_box">
-                     <div class="news_img mr_le">
-                        <figure><img src="images/blog1.jpg" alt="#"/></figure>
-                     </div>
-                     <div class="news_room">
-                        <span>Post By :limelight</span>
-                        <ul>
-                           <li><a href="Javascript:void(0)">Like <i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)">Comment <i class="fa fa-comments-o" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)">Share <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
-                        </ul>
-                        <h3>Artictecture</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content  </p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-12">
-                  <a class="read_more" href="Javascript:void(0)"> Read More</a>
-               </div>
-            </div>
-         </div>
-      </div>
       <!-- end latest news -->
       <!--  contact -->
       <div id="contact" class="contact">
@@ -320,33 +247,12 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Contact Us</h2>
+                     <h2 class="text-dark">Contactanos</h2>
                   </div>
                </div>
             </div>
             <div class="row">
-               <div class="col-md-6">
-                  <form id="request" class="main_form">
-                     <div class="row">
-                        <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Name" type="type" name="Name"> 
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Email" type="type" name="Email"> 
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">                          
-                        </div>
-                        <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message</textarea>
-                        </div>
-                        <div class="col-md-12">
-                           <button class="send_btn">Send</button>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-               <div class="col-md-6">
+               <div class="col-md-12">
                   <div class="map_main">
                      <div class="map-responsive">
                         <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Cl.+61+%2353-14,+La+Candelaria,+Medell%C3%ADn,+Antioquia" width="600" height="345" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
@@ -388,14 +294,12 @@
                      </p>
                   </div>
                   <div class="col-md-3 col-sm-6">
-                     <h3>INFORMATION</h3>
+                     <h3>INFORMACION</h3>
                      <ul class="link_menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html"> About</a></li>
-                        <li><a href="service.html">Services</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="testimonial.html">Testimonial</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="#about">A cerca</a></li>
+                        <li><a href="#service">Servicios</a></li>
+                        <li><a href="#gallery">Galeria</a></li>
+                        <li><a href="#contact">Contactanos</a></li>
                      </ul>
                   </div>
                   <div class="col-md-3 col-sm-6">
@@ -405,7 +309,7 @@
                         orem Ipsum available
                         , but the majority h
                         ave suffered altera
-                        tion in some form, by 
+                        tion in some form, by
                      </p>
                   </div>
                   <div class="col-md-6 offset-md-6">
